--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,20 +1,20 @@
 steps:
   # Build the container image
   - name: "gcr.io/cloud-builders/docker"
-    args: ["build", "-t", "gcr.io/$PROJECT_ID/dictAPI:$COMMIT_SHA", "."]
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/dict-api:$COMMIT_SHA", "."]
   # Push the container image to Container Registry
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/$PROJECT_ID/dictAPI:$COMMIT_SHA"]
+    args: ["push", "gcr.io/$PROJECT_ID/dict-api:$COMMIT_SHA"]
   # Deploy container image to Cloud Run
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
     entrypoint: gcloud
     args:
       - "run"
       - "deploy"
-      - "dictAPI"
+      - "dict-api"
       - "--image"
-      - "gcr.io/$PROJECT_ID/dictAPI:$COMMIT_SHA"
+      - "gcr.io/$PROJECT_ID/dict-api:$COMMIT_SHA"
       - "--region"
       - "us-central1"
 images:
-  - "gcr.io/$PROJECT_ID/dictAPI:$COMMIT_SHA"
+  - "gcr.io/$PROJECT_ID/dict-api:$COMMIT_SHA"
